--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Demo</title>
+    <style>
+      body {
+        font-size: 20px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
