Modified fiexed stylings

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="font-size: 50px;">
     <div id="root"></div>
     <script src="./index.tsx"></script>
   </body>
